# LiteRAG

./: .env.example  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev-commands.sh  docker-compose.yml  pyproject.toml  setup-dev.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
docs/: VECTOR_DB_EXPLAINED.md  VECTOR_DB_FOR_BACKEND_ENGINEERS.md
embedding-service/: main.py  pyproject.toml  requirements.txt
rag-api/: Dockerfile  main.py  pyproject.toml  requirements.txt
scripts/: literag-cleanup.sh  literag-status.sh  start-literag.sh
tests/: test_rag.py
